Fixed spacing and updated main secton-1 content

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,6 @@ header {
   top: 0;
   left: 0;
   text-align: center;
-  padding: 180px 20px;
   background-image: linear-gradient(rgb(0, 0, 0, 0.6), rgb(0, 0, 0, 0.6)),
     url("/media/header-bg.jpg");
 
@@ -22,6 +21,10 @@ header {
   background-repeat: no-repeat;
   background-position: bottom;
   color: white;
+}
+
+.header-content {
+  padding: 180px 20px;
 }
 
 .above-heading {
@@ -75,16 +78,15 @@ section p {
 }
 
 .first-section {
-  padding: 120px 80px;
+  padding: 100px 80px;
   display: grid;
-  grid-template-columns: 1fr 1.5fr;
+  grid-template-columns: 1fr 1fr;
   grid-row-gap: 30px;
   grid-column-gap: 60px;
 }
 
 .first-section img {
   width: 100%;
-  max-width: 800px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -119,17 +121,17 @@ footer a {
   color: #3f8482;
 }
 
+.resource-links a {
+  display:block;
+  margin: 10px 0;
+
+}
+
 footer a:hover {
   color: rgba(255, 255, 255, 0.75);
 }
 
-@media (max-width: 1200px) {
-  .first-section {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media (max-width: 1150px) {
+@media (max-width: 900px) {
   .first-section {
     grid-template-columns: 1fr;
   }
@@ -140,22 +142,12 @@ footer a:hover {
 
   .first-section div {
     margin-top: 30px;
-    text-align: center;
   }
 
-  footer {
-    grid-template-columns: 1fr;
-    grid-gap: 30px;
-    padding: 40px 30px;
-    text-align: center;
-  }
-}
-
-@media (max-width: 800px) {
-  header {
+  .header-content {
     padding: 60px 20px;
   }
-  
+
   header a {
     padding: 6px 12px;
     font-size: 14px;
@@ -172,6 +164,11 @@ footer a:hover {
 
   h2 {
     font-size: 20px;
+  }
+  footer {
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+    padding: 40px 30px;
   }
 }
 
